--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="row heart">
-                        <div class="col-md-4 col-md-offset-4" style="">
+                        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3" style="">
                             <h4 class="background"><span class="fa fa-heart-o" aria-hidden="true"></span></h4>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
             </div>
         </div>
         <div class="row heart">
-            <div class="col-md-4 col-md-offset-4" style="">
+            <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3" style="">
                 <h4 class="background"><span class="fa fa-heart-o" aria-hidden="true"></span></h4>
             </div>
         </div>
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                     <div class="row heart">
-                        <div class="col-md-4 col-md-offset-4" style="">
+                        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3" style="">
                             <h4 class="background"><span class="fa fa-heart-o" aria-hidden="true"></span></h4>
                         </div>
                     </div>
@@ -449,7 +449,7 @@
                 </div>
             </div>
             <div class="row heart">
-                <div class="col-md-4 col-md-offset-4" style="">
+                <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3" style="">
                     <h4 class="background"><span class="fa fa-heart-o" aria-hidden="true"></span></h4>
                 </div>
             </div>
@@ -487,7 +487,7 @@
             </div>
         </div>
         <div class="row heart">
-            <div class="col-md-4 col-md-offset-4" style="">
+            <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3" style="">
                 <h4 class="background"><span class="fa fa-heart-o" aria-hidden="true"></span></h4>
             </div>
         </div>
