--- a/app/index.html
+++ b/app/index.html
@@ -313,15 +313,12 @@
                                         <h4>enim ipsam  voluptatem quia voluptas  sit aspernatur aut o</h4>
                                         <ul class="social">
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                  <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                   <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-facebook fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                         </ul>
@@ -342,15 +339,12 @@
                                         <h4>enim ipsam  voluptatem quia voluptas  sit aspernatur aut o</h4>
                                         <ul class="social">
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-facebook fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                         </ul>
@@ -372,15 +366,12 @@
                                         <h4>enim ipsam  voluptatem quia voluptas  sit aspernatur aut o</h4>
                                         <ul class="social">
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-facebook fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                         </ul>
@@ -402,15 +393,12 @@
                                         <h4>enim ipsam  voluptatem quia voluptas  sit aspernatur aut o</h4>
                                         <ul class="social">
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-facebook fa-stack-1x "></i>
                                             </a></li>
                                             <li><a href="#" class="fa-stack fa" aria-hidden="true">
-                                                <i class="fa fa-square fa-stack-2x" style="color:#12806a;"></i>
                                                 <i class="fa fa-twitter fa-stack-1x "></i>
                                             </a></li>
                                         </ul>
@@ -526,7 +514,7 @@
                         <div class="col-md-12">
                             <!-- Send Button -->
                             <button id="submit" name="submit" class="form-btn bvcv">
-                                <img  class="envelope" src="img/icon/Envelope.png" alt="" style="padding-right:10px;">Send Message
+                                <span class="glyphicon glyphicon-envelope"></span>Send Message
                             </button>
                         </div><!-- End Bottom Submit -->
                         <!-- Clear -->
