--- a/app/index.html
+++ b/app/index.html
@@ -101,7 +101,6 @@
                             </div>
                             <div class="col-md-10 ">
                                 <h1 class="content">Branding</h1>
-                                <br>
                                 <p class="content name">Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </p>
                             </div>
                         </div>
@@ -113,7 +112,6 @@
                             </div>
                             <div class="col-md-10">
                                 <h1 class="content">Branding</h1>
-                                <br>
                                 <p class="content name">Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </p>
                             </div>
                         </div>
@@ -125,7 +123,6 @@
                         </div>
                         <div class="col-md-10">
                             <h1 class="content">Branding</h1>
-                            <br>
                             <p class="content name">Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </p>
                         </div>
                     </div>
@@ -491,7 +488,7 @@
                     <h6 class="location"> 2345 Setwant natrer, 123, Washington, Uninted States, (041) 1234 567, hello@brandi.com www.brandi.com</h6>
                 </div>
             </div>
-            <div class="col-md-8 col-sm-12 col-xs-12 responsive-margin no-padding">
+            <div class="col-md-8 col-sm-12 col-xs-12 responsive-margin no-padding" style="margin-left: -35px;">
                 <h3 class="location"><strong>Say hello!</strong></h3>
                 <div class="contact-form">
                     <!-- Form -->
@@ -569,7 +566,7 @@
                 <h6 class="description">eusmod tempor incididunt ut labore et dolore magna aliqua. Ut eeusmod tempor incididunt ut labore et dolore magna aliqua. Ut eeusmod tempor incididunt ut labore et dolore magna aliqua. Ut e</h6>
             </div>
             <div class="col-md-3 responsive-margin">
-                <h5 class="sub">subscribe</h5>
+                <h5 class="sub">Subscribe</h5>
                 <div class="form col-md-12">
                     <form action="#">
                         <div class="input-group">
