--- a/app/index.html
+++ b/app/index.html
@@ -178,8 +178,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
@@ -191,8 +190,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
@@ -204,8 +202,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
@@ -217,8 +214,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
@@ -230,8 +226,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
@@ -243,8 +238,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
@@ -256,8 +250,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
@@ -269,8 +262,7 @@
                 <div class="overlay">
                     <div class="overlay-text">
                         <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                  <i class="fa fa-eye fa-stack-1x" aria-hidden="true"></i>
+                                  <i class="fa fa-eye fa-stack-1x icon-test" aria-hidden="true"></i>
                         </span>
                         <h3>Labore et dolore magnam </h3>
                         <h5>Photography</h5>
