--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brandi <span class="brand">|&nbsp;&nbsp;I'm your tag line</span></a>
+            <a class="navbar-brand" href="#">Brandi <span class="dash">|</span> <span class="brand">I'm your tag line</span></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right" id="navbarmenu">
@@ -161,8 +161,7 @@
             </div>
         </div>
         <div class="row content">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-8 col-md-offset-2 text-center">
                 <button type="button" class="btn btn-default btn-lg no-border works-button">All</button>
                 <button type="button" class="btn btn-default btn-lg no-border works-button">Branding</button>
                 <button type="button" class="btn btn-default btn-lg no-border works-button">Web</button>
