--- a/app/index.html
+++ b/app/index.html
@@ -563,7 +563,7 @@
                         <div class="input-group">
                             <input type="text" class="form-control input"  name="search">
                             <div class="input-group-btn">
-                                <button class="btn btn-default form-btn" type="submit"><i class="glyphicon glyphicon-arrow-right"></i></button>
+                                <button class="btn form-btn" type="submit"><i class="glyphicon glyphicon-arrow-right"></i></button>
                             </div>
                         </div>
                     </form>
@@ -585,7 +585,7 @@
                 </ul>
             </div>
             <div class="col-md-3 responsive-margin">
-                <h6 class="sub">Created with<span class="fa fa-heart-o"></span>by themecurve,  exclusive for kreatives</h6>
+                <h6 class="sub">Created with<span class="fa fa-heart-o"></span>by <span style="color:#062033;">themecurve</span>,  exclusive for kreatives</h6>
                 <h6 class="brand"><span class="fa fa-copyright"></span>2014 Brandi. All Right Reserved</h6>
             </div>
         </div>
