--- a/app/index.html
+++ b/app/index.html
@@ -575,17 +575,17 @@
                 <h5 class="sub">explore</h5>
                 <ul class="list-group row explore">
                     <li class="list-group-item col-xs-6"><a href="#">Envato</a></li>
+                    <li class="list-group-item col-xs-6"><a href="#">Themeforest</a></li>
                     <li class="list-group-item col-xs-6"><a href="#">Themecurve</a></li>
-                    <li class="list-group-item col-xs-6"><a href="#">Kreativeshowcase</a></li>
-                    <li class="list-group-item col-xs-6"><a href="#">Freebiecurve</a></li>
-                    <li class="list-group-item col-xs-6"><a href="#">Themforest</a></li>
                     <li class="list-group-item col-xs-6"><a href="#">Microsoft</a></li>
+                    <li class="list-group-item col-xs-6"><a href="#">Kreativeshowcase</a></li>
                     <li class="list-group-item col-xs-6"><a href="#">Google</a></li>
+                    <li class="list-group-item col-xs-6"><a href="#">Freebiecurve</a></li>
                     <li class="list-group-item col-xs-6"><a href="#">Yahoo</a></li>
                 </ul>
             </div>
             <div class="col-md-3 responsive-margin">
-                <h6 class="sub">Created with<span class="fa fa-heart-o"></span>by <span style="color:#062033;">themecurve</span>,  exclusive for kreatives</h6>
+                <h6 class="sub">Created with<span class="fa fa-heart-o" style="padding: 0 16px;font-size: 12pt;"></span>by <span style="color:#062033; padding: 0;">themecurve</span>,  exclusive for kreatives</h6>
                 <h6 class="brand"><span class="fa fa-copyright"></span>2014 Brandi. All Right Reserved</h6>
             </div>
         </div>
