--- a/app/index.html
+++ b/app/index.html
@@ -568,7 +568,7 @@
                         </div>
                     </form>
                 </div>
-                <h6 class="description1">eusmod tempor incididunt ut labore et dolore magna aliqua. Ut eeusmod tempor incididunt ut labore et dolore magna aliqua. Ut eeusmod tempor incididunt ut labore et dolore magna aliqua. Ut e</h6>
+                <h6 class="description1">eusmod tempor incididunt ut labore et dolore magna aliqua. Ut eeusmod tempor incididunt ut </h6>
 
             </div>
             <div class="col-md-3 responsive-margin">
