--- a/app/index.html
+++ b/app/index.html
@@ -35,11 +35,11 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right" id="navbarmenu">
-        <li><a href="#home" class=" scroll">Home</a></li>
-        <li><a href="#feature" class="scroll">Feature</a></li>
-        <li><a href="#works" class="scroll">Works</a></li>
-        <li><a href="#team" class="scroll">Team</a></li>
-        <li><a href="#contact" class="scroll">Contact</a></li>
+            <li><a href="#home" class=" scroll">Home</a></li>
+            <li><a href="#feature" class="scroll">Feature</a></li>
+            <li><a href="#works" class="scroll">Works</a></li>
+            <li><a href="#team" class="scroll">Team</a></li>
+            <li><a href="#contact" class="scroll">Contact</a></li>
         </ul>
         </div>
     </div>
@@ -479,7 +479,7 @@
                     <h6 class="location"> 2345 Setwant natrer, 123, Washington, Uninted States, (041) 1234 567, hello@brandi.com www.brandi.com</h6>
                 </div>
             </div>
-            <div class="col-md-8 col-sm-12 col-xs-12 responsive-margin no-padding" style="margin-left: -35px;">
+            <div class="col-md-8 col-sm-12 col-xs-12 responsive-margin no-padding form-margin">
                 <h3 class="location"><strong>Say hello!</strong></h3>
                 <div class="contact-form">
                     <!-- Form -->
@@ -515,30 +515,25 @@
                 <ul class='social'>
                     <li>
                         <a class="fa fa-behance" aria-hidden="true" href="#">
-                            <span>Behance</span>
                         </a>
                     </li>
 
                     <li>
                         <a class="fa fa-twitter" href="#">
-                            <span>Twitter</span>
                         </a>
                     </li>
 
                     <li>
                         <a class="fa fa-dribbble" href="#">
-                            <span>Dribbble</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa fa-facebook" href="#">
-                            <span>Facebook</span>
                         </a>
                     </li>
 
                     <li>
                         <a class="fa fa-google-plus" href="#">
-                            <span>Google Plus</span>
                         </a>
                     </li>
                 </ul>
