--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 </head>
 <body id="wrapper">
 <nav class="navbar navbar-dark navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container no-paddingright">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
@@ -275,7 +275,7 @@
     <div class="slick-slider">
         <ul class="slick-container" >
             <li class="slick-item">
-                <div class="container">
+                <div class="container no-padding">
                     <div class="row title">
                         <div class="col-md-6 col-md-offset-3">
                             <h1 class="header"> meet our team</h1>
@@ -418,7 +418,7 @@
 </section>
 <section id="fun">
     <div class="bgrfun">
-        <div class="container">
+        <div class="container no-padding">
             <div class="row title">
                 <div class="col-md-6 col-md-offset-3 ">
                     <h1 class="header"> some fun facts</h1>
@@ -456,7 +456,7 @@
     </div>
 </section>
 <section id="contact">
-    <div class="container">
+    <div class="container no-padding">
         <div class="row title">
             <div class="col-md-4 col-md-offset-4 ">
                 <h1 class="header"> let's discuss</h1>
