--- a/app/index.html
+++ b/app/index.html
@@ -275,7 +275,7 @@
     <div class="slick-slider">
         <ul class="slick-container" >
             <li class="slick-item">
-                <div class="container no-padding">
+                <div class="container no-paddingresponsive">
                     <div class="row title">
                         <div class="col-md-6 col-md-offset-3">
                             <h1 class="header"> meet our team</h1>
@@ -418,7 +418,7 @@
 </section>
 <section id="fun">
     <div class="bgrfun">
-        <div class="container no-padding">
+        <div class="container no-paddingresponsive">
             <div class="row title">
                 <div class="col-md-6 col-md-offset-3 ">
                     <h1 class="header"> some fun facts</h1>
@@ -456,7 +456,7 @@
     </div>
 </section>
 <section id="contact">
-    <div class="container no-padding">
+    <div class="container no-paddingresponsive">
         <div class="row title">
             <div class="col-md-4 col-md-offset-4 ">
                 <h1 class="header"> let's discuss</h1>
