fix todo part 1

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
 <body id="wrapper">
 <nav class="navbar navbar-dark navbar-default navbar-fixed-top">
     <div class="container no-paddingright">
+        <!--todo khong biet muc dich cua no-paddingright lam gi luon, layout dang dung ma-->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
@@ -54,6 +55,7 @@
                     <h1 class="home-text1">Meet <strong>Brandi!</strong></h1>
                     <h2 class="home-text2"><span class="text2">/creative</span> one page template.</h2>
                     <h2 class="home-text2 text3 no-background">&nbsp;<span> We are a team of professionals</span></h2>
+                    <!--todo khuc social nay bi sai, sua lai social nay absolute theo slider, slider co thay doi thi cai social nay cung khong thay doi-->
                     <ul class="social">
                         <li><a href="#" class="fa fa-twitter"></a></li>
                         <li><a href="#" class="fa fa-facebook"></a></li>
@@ -65,10 +67,15 @@
             <li class="slick-item">
                 <img src="img/header_img.png" alt="header" class="img-responsive">
                 <div class="slide-text">
+                    <!--todo nguyen tac dat ten class id image la 2 chu tro len co - va co so thi phai dat so -01 -02 -03
+                    VD: home-text-01
+                    =>> sua lai toan bo cac loai class, id, image nhu the nay
+                    -->
                     <h1 class="home-text1">Meet <strong>Brandi!Brandi!Brandi!</strong></h1>
                 </div>
             </li>
             <li class="slick-item">
+                <!-- TODO tuong tu dat ten file iamge cung giong ten class hoac id-->
                 <img src="img/header_img.png" alt="header" class="img-responsive">
                 <div class="slide-text">
                     <h2 class="home-text2"><span>/creative</span> one page template.</h2>
@@ -83,6 +90,7 @@
             <li class="slick-item">
                 <div class="container">
                     <div class="row title">
+                        <!--todo cai title nay la title xuyen suot ma, dau phai title theo slider dau =.=! -->
                         <div class="col-md-2 col-md-offset-5 ">
                             <h1 class="header"> FEATURE</h1>
                         </div>
@@ -131,6 +139,9 @@
             </li>
             <li class="slick-item">
                 <div class="slide-text">
+                    <!-- todo minh lam demo nhung cung phai copy dang hoang nha =.=! ko thi cung phai losum
+                    cac slider nay tuong duong nhu slider dau tien, nguyen ly hau het cac trang co slider la vay, khong co trang nao slider dau 1 kieu, slider sau khac kieu dau
+                    -->
                     <h1 style="color: black;">askdjlksajdlkjlas</h1>
                     <h2 style="color: black;">askdjlksajdlkjlas</h2>
                 </div>
@@ -143,6 +154,7 @@
         </ul>
     </div>
 </section>
+<!--todo doan nay thay hinh lai gium c, trong design co du hinh ma, sao ko cat ra, copy y 1 tam hinh nhin loan ca mat-->
 <section id="works">
     <div class="container">
         <div class="row title">
@@ -271,6 +283,7 @@
         </div>
     </div>
 </section>
+<!-- todo cai nay sai tuong tu voi cai slider thu 2 luon ha-->
 <section id="team" class="inline-slide">
     <div class="slick-slider">
         <ul class="slick-container" >
