--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
             <li class="slick-item">
                 <div class="container no-padding">
                     <div class="row content" style="">
-                        <div class="col-md-4 responsive-margin no-padding">
+                        <div class="col-md-4 responsive-margin ">
                             <div class="col-md-3">
                                 <span class="fa-stack fa-lg">
                                   <i class="fa fa-clock-o fa-stack-1x icon-test"></i>
@@ -115,7 +115,7 @@
                                 <p class="content name">Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </p>
                             </div>
                         </div>
-                        <div class="col-md-4 responsive-margin">
+                        <div class="col-md-4 responsive-margin ">
                             <div class="col-md-3">
                                 <span class="fa-stack fa-lg">
                                   <i class="fa fa-pencil fa-stack-1x icon-test "></i>
@@ -126,7 +126,7 @@
                                 <p class="content name">Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  Sed ut perspiciatis unde omnis iste natus error sit voluptatem Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </p>
                             </div>
                         </div>
-                        <div class="col-md-4 responsive-margin">
+                        <div class="col-md-4 responsive-margin ">
                         <div class="col-md-3">
                                 <span class="fa-stack fa-lg">
                                   <i class="fa  fa-bullhorn fa-rotate-45 fa-stack-1x icon-test "></i>
@@ -739,7 +739,7 @@
                     <h4 class="background"><span class="fa fa-heart-o" aria-hidden="true"></span></h4>
                 </div>
             </div>
-            <div class="row">
+            <div class="row highlight">
                 <div class="col-md-3 col-sm-6 col-xs-6 text-center responsive-margin">
                     <img src="img/icon/clock.png" alt="clock">
                     <h1>3200</h1>
