--- a/app/index.html
+++ b/app/index.html
@@ -800,10 +800,10 @@
                         </div><!-- End Left Inputs -->
                         <!-- Right Inputs -->
                         <!-- Bottom Submit -->
-                        <div class="col-md-12">
+                        <div class="col-md-12 pl-20">
                             <!-- Send Button -->
                             <button id="submit" name="submit" class="form-btn bvcv">
-                                <span class="glyphicon glyphicon-envelope"></span>Send Message
+                                <img src="img/icon/Envelope.png" alt="">Send Message
                             </button>
                         </div><!-- End Bottom Submit -->
                         <!-- Clear -->
@@ -812,29 +812,34 @@
                     <!-- Your Mail Message -->
                 </div><!-- End Contact Form Area -->
             </div>
-            <div class="col-md-1 col-sm-12 col-xs-12 responsive-margin">
+            <div class="col-md-1 col-sm-12 col-xs-12 responsive-margin social">
                 <ul class='social'>
                     <li>
-                        <a class="fa fa-behance" aria-hidden="true" href="#">
+                        <a href="#">
+                            <img src="img/icon/behance.png" alt="">
                         </a>
                     </li>
 
                     <li>
-                        <a class="fa fa-twitter" href="#">
+                        <a href="#">
+                            <img src="img/icon/twitter.png" alt="">
                         </a>
                     </li>
 
                     <li>
-                        <a class="fa fa-dribbble" href="#">
+                        <a  href="#">
+                            <img src="img/icon/dribbble.png" alt="">
                         </a>
                     </li>
                     <li>
-                        <a class="fa fa-facebook" href="#">
+                        <a  href="#">
+                            <img src="img/icon/forrst.png" alt="">
                         </a>
                     </li>
 
                     <li>
-                        <a class="fa fa-google-plus" href="#">
+                        <a href="#">
+                            <img src="img/icon/googleplus.png" alt="">
                         </a>
                     </li>
                 </ul>
